# tennis_diary

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yaml  manage.py  pyproject.toml
clubs/migrations/: 0001_initial.py
clubs/models/: __init__.py  address.py  club.py  court.py
games/migrations/: 0001_initial.py
games/models/: __init__.py  exercise.py  game.py
players/forms/: forms.py
players/migrations/: 0001_initial.py
players/models/: __init__.py  player.py
players/schema/: schema.py
players/schema/mutations/: mutations.py
players/schema/queries/: queries.py
players/types/: types.py
tennis_diary/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
tennis_diary/tennis_diary/: settings.py  wsgi.py
