[tool.poetry]
name = "tennis-diary"
version = "0.1.0"
description = "Backend of Tennis Diary Application written in Django"
authors = ["Michal Urbanczyk <michaurbanczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
