[tool.poetry]
name = "tennis-diary"
version = "0.1.0"
description = "Backend of Tennis Diary Application written in Django"
authors = ["Michal Urbanczyk <michaurbanczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
graphene-django = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
